First developer preview version

--- a/Mc2.CrudTest.Presentation/Front/Pages/Index.razor
+++ b/Mc2.CrudTest.Presentation/Front/Pages/Index.razor
@@ -4,4 +4,6 @@
 
 Feel free to change the solution the way you think is right.
 
+<MyLink Title="MySwagger" Link="/swagger" />
+
 <SurveyPrompt Title="CrudTest" />
