--- a/Mc2.CrudTest.Presentation/Front/Pages/Index.razor
+++ b/Mc2.CrudTest.Presentation/Front/Pages/Index.razor
@@ -4,6 +4,8 @@
 
 Feel free to change the solution the way you think is right.
 
-<MyLink Title="MySwagger" Link="/swagger" />
+<MyLink Title="Go2sh" Link="/swagger" />
+<MyLink Title="Customers" Link="/customers" />
+<MyLink Title="AddCustomer" Link="/customers/add" />
 
 <SurveyPrompt Title="CrudTest" />
