--- a/Mc2.CrudTest.Presentation/Front/Shared/NavMenu.razor
+++ b/Mc2.CrudTest.Presentation/Front/Shared/NavMenu.razor
@@ -22,6 +22,20 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/customers">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Customers
+            </NavLink>
+        </li>
+       <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/customers/add">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Add Customer
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <span><a class="btn btn-link" href="/swagger">My Swagger</a></span>
+        </li>
     </ul>
 </div>
 
