--- a/Mc2.CrudTest.Presentation/Front/_Imports.razor
+++ b/Mc2.CrudTest.Presentation/Front/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Mc2.CrudTest.Presentation.Front.Shared
+@using Mc2.CrudTest.Domain.DTO;
+@*@using Blazored.FluentValidation*@
