--- a/Mc2.CrudTest.Presentation/Front/Shared/MainLayout.razor
+++ b/Mc2.CrudTest.Presentation/Front/Shared/MainLayout.razor
@@ -1,13 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
     <div class="main">
         <div class="top-row px-4">
-            <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+            <a href='/swagger' target="_blank" class="ml-md-auto">Swagger</a>
         </div>
 
         <div class="content px-4">
